--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,20 @@
 		</pluginManagement>
 		<plugins>
 			<plugin>
+			<artifactId>maven-clean-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>log/</directory>
+							<includes>
+								<include>**/*.log</include>
+							</includes>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.1.0</version>
